--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.47.3",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.25.0",
@@ -41,6 +43,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "nodemailer": "^6.9.16",
+    "nuqs": "^2.4.3",
     "openai": "^4.80.1",
     "prisma": "^6.0.1",
     "react": "^19.0.0",
@@ -52,6 +55,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "xmlbuilder2": "^3.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
