--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.0.1",
+    "@radix-ui/react-checkbox": "^1.3.1",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.12",
     "@radix-ui/react-label": "^2.1.4",
@@ -53,6 +54,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "decimal.js": "^10.5.0",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.12.0",
     "inngest": "^3.27.5",
@@ -88,6 +90,7 @@
     "@storybook/nextjs": "^8.5.3",
     "@storybook/react": "^8.5.3",
     "@storybook/test": "^8.5.3",
+    "@types/decimal.js": "^0.0.32",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
