--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "decimal.js": "^10.5.0",
     "framer-motion": "^11.15.0",
     "groq-sdk": "^0.12.0",
+    "html5-qrcode": "^2.3.8",
     "inngest": "^3.27.5",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
@@ -70,6 +71,9 @@
     "nuqs": "^2.4.3",
     "openai": "^4.80.1",
     "prisma": "^6.0.1",
+    "puppeteer": "^24.9.0",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-datepicker": "^7.6.0",
     "react-day-picker": "^8.10.1",
@@ -98,6 +102,7 @@
     "@types/decimal.js": "^0.0.32",
     "@types/lodash": "^4.17.16",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
