--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "html5-qrcode": "^2.3.8",
     "inngest": "^3.27.5",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^14.2.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
@@ -74,10 +74,10 @@
     "puppeteer": "^24.9.0",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-datepicker": "^7.6.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
