--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^5.0.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "6.8.2",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.3.1",
@@ -65,7 +65,7 @@
     "html5-qrcode": "^2.3.8",
     "inngest": "^3.27.5",
     "lucide-react": "^0.468.0",
-    "next": "^14.2.4",
+    "next": "^15.2.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
@@ -106,7 +106,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "prisma": "^6.0.1",
+    "prisma": "6.8.2",
     "storybook": "^8.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
