--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3",
     "resend": "^4.0.1",
+    "sonner": "^2.0.4",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
