feat: complete inventory item form enhancements and category integration

--- a/package.json
+++ b/package.json
@@ -106,6 +106,8 @@
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "9.28.0",
+    "eslint-config-next": "15.3.3",
     "postcss": "^8",
     "prisma": "6.8.2",
     "storybook": "^8.5.3",
