--- a/package.json
+++ b/package.json
@@ -112,7 +112,9 @@
     "@types/react-dom": "^19",
     "eslint": "9.28.0",
     "eslint-config-next": "15.3.3",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.2.0",
     "postcss": "^8",
     "prisma": "6.8.2",
     "storybook": "^8.5.3",
