--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "postinstall": "prisma generate && echo \"export * from '../.prisma/client'\" > node_modules/@prisma/client/index.d.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "migrate:deploy": "prisma migrate deploy"
+    "migrate:deploy": "prisma migrate deploy",
+    "bootstrap": "tsx scripts/bootstrap.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.709.0",
@@ -119,6 +120,7 @@
     "prisma": "6.8.2",
     "storybook": "^8.5.3",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.7.0",
     "typescript": "^5",
     "typescript-eslint": "^8.33.1"
   }
