--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/react-datepicker": "^6.2.0",
     "@types/recharts": "^1.8.29",
+    "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -104,6 +105,7 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "xmlbuilder2": "^3.1.1",
     "zod": "^3.24.3"
   },
